assets/css/style.css
:root {
    --test-light: rgb(245, 179, 201);
    --test-dark: rgb(112, 14, 60);
    --test-light-opacity: rgba(245, 179, 201, 1);
}


/* GENERAL STYLES */


* {
    margin: 0;
    padding: 0;
}

body {
    overflow: hidden;
}


/* SCROLLBAR */


/* https://www.digitalocean.com/community/tutorials/css-scrollbars */
/* Works on Firefox */
/* * {
    scrollbar-width: thin;
    scrollbar-color:  var(--test-dark) var(--test-light);
  } */

/* Works on Chrome, Edge, and Safari */
*::-webkit-scrollbar {
    width: 6px;
}

*::-webkit-scrollbar-track {
    background: var(--test-light);
}

*::-webkit-scrollbar-thumb {
    background-color: var(--test-dark);
    border-radius: 10px;
}



/* HEADER */


#toggleMobileMenu {
    position: absolute;
    top: 50px;
    right: 50px;
}

/*-------------------------------------------------------------------------------------------------------------*/
.navbar-layout {
    padding-left: 15px;
    padding-right: 15px;
    background-color: var(--test-light);
}

.logo {
    width: 150px;
    height: 35px;
}

.settings-btn {
    border-style: none;
}

.settings-icon {
    font-size: 35px;
}

.container {
    padding: 0 !important;
    height: calc(100% - 40px - 45px);
    max-height: calc(100% - 40px - 45px);
    overflow: hidden;
}



/* REFRESH GAME/WIN/LOSE MODAL */


.game-controls {
    padding-left: 15px;
    padding-right: 15px;
    padding-top: 15px;
}

/*------------------------------------------------------------------------------------------------------*/
.start-again-button {
    display: flex;
    margin-left: auto;
    margin-right: auto;
    justify-content: center;
    width: 60px;
    height: 65px;
    background-color: var(--test-light);
}

.start-again-svg {
    width: 40px;
    height: 55px;
}

.timer,
.flag-count {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 30px;
    padding-right: 10px
}

#flag-count {
    padding-right: 10px;
    ;
}

.flag-btn-size {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 20px;
    width: 35px;
    height: 35px;
}


/* MINESWEEPER BOARD */


.game-container {
    height: 80vh;
}

.game-container .row:nth-last-of-type() {
    height: 80vh;
    overflow: scroll;
}

.minesweeper {
    display: flex;
    height: 70vh !important;
    min-height: 70vh !important;
    overflow: scroll !important;
    margin: 20px auto 0 auto;
    padding: 0 !important;
    align-items: center;
    justify-content: center;
    /*scroll-padding-top:20px;------------------------------------------------------------------------------------*/
}

.board {
    display: flex;
    flex-wrap: wrap;
}

/*-----------------------------------------------------------------------------------------------------------------*/
.board div {
    width: 40px;
    height: 40px;
    border: 2px solid rgb(196, 93, 93);
}



/* FOOTER */


/*---------------------------------------------------------------------------------------------------------------*/
footer {
    height: 40px !important;
    padding-left: 10px !important;
    padding-right: 10px !important;
    padding-top: 5px !important;
    background-color: var(--test-light);
    opacity: 0.5;
    margin-bottom: 15px;
}

/*------------------------------------------------------------------------------------------------------------*/
footer a {
    color: var(--test-dark);
    font-size: 20px;
}
footer i {
    color: var(--test-dark);
    font-size: 30px;
}
/*------------------------------------------------------------------------------------------------------------*/
footer a:active,
footer a:visited {
    color: var(--test-dark);
}

/*------------------------------------------------------------------------------------------------------------*/
footer a:hover {
    color: var(--test-dark);
}

.connect-btn {
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 5px;
    padding-right: 5px;
}



/* MEDIA QUERIES */



/*LARGE DEVICES */
@media (min-width: 990px) {
    header {
        margin-left: 30vw;
        margin-right: 30vw;
    }
}

/* EXTRA LARGE DEVICES */
@media (min-width: 1200px) {
    header {
        margin-left: 30vw;
        margin-right: 30vw;
    }
}

/* MEDIUM DEVICES */
@media (min-width: 760px) {

    .game-controls {
        margin-top: 15px;
        margin-left: 30vw;
        margin-right: 30vw;
    }

    footer i {
        font-size: 40px;
    }
}

/* SMALL VIEW QUERIES */
@media (min-width: 576px) {
    .full-game-container {
        padding-left: 0;
        padding-right: 0;
    }

    header {
        margin-top: 20px;
        margin-left: 20vw;
        margin-right: 20vw;
    }

    .logo {
        height: 75px;
        width: 200px;
    }

    .settings-icon {
        font-size: 75px;
    }

    .game-controls {
        margin-left: 5%;
        margin-right: 5%;
    }

    footer {
        margin-bottom: 40px;
    }

    footer i {
        font-size: 30px;
    }

    .connect-btn {
        margin-left: 75px;
    }

    .social-links a:last-child {
        margin-right: 75px;
    }
}


/*------------------------------------------- Mwawefoqddd ---*/
body {
    background-color: var(--test-light);
}

.light {
    background-color: var(--test-light);
}

















/*
.hidden {
    display: none;
}*/
/*------------------------------------------- Modal ---*/

.game-modal-container {
    position: absolute;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    background-color: rgba(144, 144, 144, 0.5);
    pointer-events: none;
    opacity: 0;

}

.game-modal-container.show {
    pointer-events: auto;
    opacity: 1;
}

.game-modal {
    width: 300px;
    height: 300px;
    z-index: 2000;
    background-color: red;
    visibility: visible;
    display: block;
    position: relative;
    top: 25%;
    bottom: 0;
    margin: auto;
}

#settings-modal {
    visibility: hidden;
}

.connect-modal-container {
    position: absolute;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    background-color: rgba(144, 144, 144, 0.5);
    pointer-events: none;
    opacity: 0;

}

.connect-modal-container.show {
    pointer-events: auto;
    opacity: 1;
}

.connect-modal {
    width: 300px;
    height: 300px;
    z-index: 2000;
    background-color: red;
    visibility: visible;
    display: block;
    position: relative;
    top: 25%;
    bottom: 0;
    margin: auto;
}

/*------------------------------------------- Minesweeper ---*/


.bomb {
    background-color: salmon;
}

.revealed-square {
    background-color: seagreen;
}

.mine {
    width: 30px;
    height: 30px;
}

